--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@nightwatch/vue": "^3.1.1",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@stylistic/eslint-plugin-js": "^2.6.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.14",
