--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,12 +11,15 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: ./Frontend
+        
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -26,7 +29,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd ./Frontend/
     - run: npm ci
     # - run: npm run build --if-present
     - run: npm test:unit
