--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -58,5 +58,8 @@
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.19.2"
   }
 }
