--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@primevue/themes": "^4.0.4",
     "naive-ui": "^2.39.0",
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.4",
     "vfonts": "^0.0.3",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
