--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "naive-ui": "^2.39.0",
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "vfonts": "^0.0.3",
     "vue": "^3.4.29",
