--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,11 +22,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.0.4",
+    "autoprefixer": "^10.4.20",
     "naive-ui": "^2.39.0",
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.41",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
+    "tailwindcss": "^3.4.7",
+    "tailwindcss-primeui": "^0.3.4",
     "vfonts": "^0.0.3",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@nightwatch/vue": "^3.1.1",
+    "@primevue/auto-import-resolver": "^4.0.4",
     "@rushstack/eslint-patch": "^1.8.0",
     "@stylistic/eslint-plugin-js": "^2.6.1",
     "@tsconfig/node20": "^20.1.4",
@@ -56,6 +61,7 @@
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1",
     "vite-plugin-nightwatch": "^0.4.6",
     "vite-plugin-vue-devtools": "^7.3.1",
