--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "@primevue/themes": "^4.0.4",
     "autoprefixer": "^10.4.20",
     "fuzzysort": "^3.0.2",
+    "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
     "postcss": "^8.4.41",
@@ -43,6 +44,7 @@
     "@stylistic/eslint-plugin-js": "^2.6.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.14",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -63,7 +65,7 @@
     "vite": "^5.3.1",
     "vite-plugin-nightwatch": "^0.4.6",
     "vite-plugin-vue-devtools": "^7.3.1",
-    "vitest": "^1.6.0",
+    "vitest": "^2.0.5",
     "vue-tsc": "^2.0.21"
   },
   "optionalDependencies": {
