--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,9 @@ _Pvt_Extensions
 .idea/workspace.xml
 
 Frontend/components.d.ts
+
+Frontend/.pnp.cjs
+
+Frontend/.pnp.loader.mjs
+
+Frontend/.yarn/install-state.gz
