--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate:schemas": "cd .. && typescript-json-schema ./Frontend/src/scrapedModels/*.ts * -o ./Frontend/src/scrapedModels/generatedSchemas.json"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
