--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.41",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
+    "quill": "^2.0.2",
     "tailwindcss": "^3.4.7",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
