Json schemas generated for all models

--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -3,11 +3,11 @@
   "include": [
     "env.d.ts",
     "src/**/*",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "src/**/*.d.ts",
+    "src/**/*.json"
   ],
   "compilerOptions": {
-    "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
     "paths": {
       "@/*": [
