--- a/Frontend/nightwatch/tsconfig.json
+++ b/Frontend/nightwatch/tsconfig.json
@@ -1,18 +1,33 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "composite": true,
     "noEmit": true,
-    "tsBuildInfoFile": "../node_modules/.tmp/tsconfig.nightwatch.tsbuildinfo",
-
+    "resolveJsonModule": true,
     "target": "ESNext",
     "module": "commonjs",
     "moduleResolution": "node",
+    "lib": [
+      "ESNext",
+      "dom"
+    ],
+    "types": [
+      "nightwatch"
+    ],
     "rootDir": "../",
-    "lib": ["ESNext", "dom"],
-    "types": ["nightwatch"]
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
-  "include": ["../node_modules/@nightwatch/**/*", "../src/components/**/*", "../tests/e2e/**/*"],
+  "include": [
+    "../node_modules/@nightwatch/**/*",
+    "src/**/*.vue",
+    "src/**/*.d.ts",
+    "src/**/*.json",
+    "../tests/e2e/**/*"
+  ],
   "ts-node": {
     "transpileOnly": true
   },
