--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.0.4",
+    "@vueuse/core": "^11.0.3",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
     "fuzzysort": "^3.0.2",
