--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "osrs-planner",
+  "name": "osrs-planner-frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -13,7 +13,7 @@
     "test:e2e": "nightwatch tests/e2e/*",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ignore-pattern .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write src/",
     "schemas:generate": "typescript-json-schema ./tsconfig.app.json * -o ./src/generatedSchemas.json --strictNullChecks && npm run schemas:fix",
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@nightwatch/vue": "^3.1.1",
     "@primevue/auto-import-resolver": "^4.0.4",
-    "@rushstack/eslint-patch": "^1.8.0",
     "@stylistic/eslint-plugin-js": "^2.6.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
@@ -59,7 +58,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "chromedriver": "^126.0.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-vue": "^9.23.0",
     "geckodriver": "^4.4.1",
