--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-      "forceConsistentCasingInFileNames": true,
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "outDir": "./build",
-      "rootDir": "./src",
-      "target": "es6",
-      "skipLibCheck": true,
-      "strict": true
-  }
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
