--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ignore-pattern .gitignore",
-    "lint:fix": "yarn run lint -- --fix",
+    "lint:fix": "yarn run lint --fix",
     "format": "prettier --write src/",
     "schemas:generate": "typescript-json-schema ./tsconfig.app.json * -o ./src/generatedSchemas.json --strictNullChecks && yarn run schemas:fix",
     "schemas:fix": "node ./scripts/schemaFixer.js ./src/generatedSchemas.json ./src/adaptedSchemas.json"
